# another-planka-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  WORKFLOW_OPTIMIZATIONS.md  fix_patches.py  main.py  mcp_server.py  planka_mcp.py  pyproject.toml  pytest.ini  refactoring_evaluation.md  refactoring_plan.md  refactoring_summary.json  requirements.txt  run_server.sh  test_imports.py
.claude/: settings.local.json
.github/workflows/: pre-commit.yml  test.yml
docs/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_PART2.md  IMPLEMENTATION_PLAN.md  INSTALL.md  TESTING.md  TOKEN_EFFICIENCY_ANALYSIS.md
src/planka_mcp/: __init__.py  api_client.py  cache.py  instances.py  models.py  server.py  utils.py
src/planka_mcp/handlers/: __init__.py  cards.py  search.py  tasks_labels.py  workspace.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cards.py  test_infrastructure.py  test_models.py  test_search.py  test_tasks_labels.py  test_tools.py  test_workspace.py
